[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/PlayerAnimations.png" type="Texture" id=1]
[ext_resource path="res://Objects/player/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/light_shadow_light.png" type="Texture" id=3]
[ext_resource path="res://Sprites/kumanda.png" type="Texture" id=4]
[ext_resource path="res://font/font.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scenes/SceneTransitionRect.tscn" type="PackedScene" id=6]
[ext_resource path="res://sounds/shootound.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/enemyhitsound.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/music.wav" type="AudioStream" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.89861
height = 6.11721

[sub_resource type="Animation" id=2]
resource_name = "die"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -0.153567, -2.5195 ), Vector2( -0.153567, -1.5221 ), Vector2( -0.153567, -2.5195 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.219608, 1, 0, 0.560784 ), Color( 0.0470588, 0.215686, 0, 0.560784 ), Color( 0.219608, 1, 0, 0.560784 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -0.153567, -2.02165 ), Vector2( -0.153567, -2.64037 ), Vector2( -0.153567, -2.02165 ), Vector2( -0.153567, -2.64037 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.219608, 1, 0, 0.560784 ), Color( 0.0470588, 0.223529, 0, 0.560784 ), Color( 0.219608, 1, 0, 0.560784 ), Color( 0.0470588, 0.223529, 0, 0.560784 ) ]
}

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0.45098 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 19.5, 14 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10.5341, 7.10926 )

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.707905, 1.65178 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="SpriteSheet" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 9
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -0.153567, -2.5195 )
scale = Vector2( 90.1253, 80.2654 )
texture = ExtResource( 3 )
texture_scale = 0.01
color = Color( 1, 1, 1, 0.427451 )
energy = 2.17
shadow_enabled = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
process_mode = 0
limit_smoothed = true
smoothing_enabled = true

[node name="Kumanda" type="Position2D" parent="."]
position = Vector2( -0.369527, 4.11707 )

[node name="kumandaSprite" type="Sprite" parent="Kumanda"]
position = Vector2( -0.0438747, -0.0841618 )
rotation = -4.69407
scale = Vector2( 0.573385, 0.573385 )
texture = ExtResource( 4 )

[node name="aim" type="Position2D" parent="Kumanda"]
position = Vector2( 0.686951, 0.0318451 )
__meta__ = {
"_gizmo_extents_": 2.8
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 222.247
margin_right = 294.247
margin_bottom = 18.0
custom_fonts/font = ExtResource( 5 )
text = "BATARYA GÜCÜ:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerValue" type="Label" parent="CanvasLayer"]
margin_left = 298.176
margin_top = -1.82886
margin_right = 396.176
margin_bottom = 16.1712
custom_fonts/font = ExtResource( 5 )
text = "100"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer"]
self_modulate = Color( 0.431373, 1, 0, 1 )
margin_left = 4.21381
margin_top = 0.264862
margin_right = 76.2138
margin_bottom = 18.2649
custom_fonts/font = ExtResource( 5 )
text = "SINYAL:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SinyalValue" type="Label" parent="CanvasLayer"]
self_modulate = Color( 0.431373, 1, 0, 1 )
margin_left = 42.8163
margin_top = -1.68369
margin_right = 86.8163
margin_bottom = 16.3163
custom_fonts/font = ExtResource( 5 )
text = "20"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgainButton" type="Button" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.5
margin_top = -10.0
margin_right = 44.5
margin_bottom = 10.0
custom_styles/focus = SubResource( 5 )
custom_fonts/font = ExtResource( 5 )
text = "Tekrar Dene"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletGet" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="BulletGet"]
shape = SubResource( 6 )

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 7 )

[node name="SceneTransitionRect" parent="." instance=ExtResource( 6 )]

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -4.0

[node name="hitsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -4.0

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0
autoplay = true

[connection signal="pressed" from="CanvasLayer/TryAgainButton" to="." method="_on_Button_pressed"]
[connection signal="area_entered" from="BulletGet" to="." method="_on_BulletGet_area_entered"]
[connection signal="area_exited" from="BulletGet" to="." method="_on_BulletGet_area_exited"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
